site/api/4.06/index_modules.md
<!-- ((! set title API !)) ((! set documentation !)) ((! set api !)) ((! set nobreadcrumb !)) -->
<div class="api"><header><nav class="toc brand"><a class="brand" href="https://ocaml.org/"><img src="colour-logo-gray.svg" class="svg" alt="OCaml"></a></nav><nav class="toc"><div class="toc_version"><a href="/docs" id="version-select">API Version 4.06</a></div><a href="index.html">&lt; General Index</a><div class="api_search"><input type="text" name="apisearch" id="api_search" oninput="mySearch(false);" onkeypress="this.oninput();" onclick="this.oninput();" onpaste="this.oninput();">
<img src="search_icon.svg" alt="Search" class="svg" onclick="mySearch(false)"></div>
<div id="search_results"></div><div class="toc_title"><a href="#top">Index of modules</a></div><ul></ul></nav></header>

<h1>Index of modules</h1>
<table>
<tbody><tr><td align="left"><div>A</div></td></tr>
<tr><td><a href="Arg.html">Arg</a> </td>
<td><div class="info">
<p>Parsing of command line arguments.</p>

</div>
</td></tr>
<tr><td><a href="Arg_helper.html">Arg_helper</a> </td>
<td><div class="info">
<p>Decipher command line arguments of the form
        &lt;value&gt; | &lt;key&gt;=&lt;value&gt;<code class="code">,...</code>
    (as used for example for the specification of inlining parameters
    varying by simplification round).</p>

</div>
</td></tr>
<tr><td><a href="StdLabels.Array.html">Array</a> [<a href="StdLabels.html">StdLabels</a>]</td>
<td></td></tr>
<tr><td><a href="Misc.Stdlib.Array.html">Array</a> [<a href="Misc.Stdlib.html">Misc.Stdlib</a>]</td>
<td></td></tr>
<tr><td><a href="Array.html">Array</a> </td>
<td><div class="info">
<p>Array operations.</p>

</div>
</td></tr>
<tr><td><a href="Bigarray.Array0.html">Array0</a> [<a href="Bigarray.html">Bigarray</a>]</td>
<td><div class="info">
<p>Zero-dimensional arrays.</p>

</div>
</td></tr>
<tr><td><a href="Bigarray.Array1.html">Array1</a> [<a href="Bigarray.html">Bigarray</a>]</td>
<td><div class="info">
<p>One-dimensional arrays.</p>

</div>
</td></tr>
<tr><td><a href="Bigarray.Array2.html">Array2</a> [<a href="Bigarray.html">Bigarray</a>]</td>
<td><div class="info">
<p>Two-dimensional arrays.</p>

</div>
</td></tr>
<tr><td><a href="Bigarray.Array3.html">Array3</a> [<a href="Bigarray.html">Bigarray</a>]</td>
<td><div class="info">
<p>Three-dimensional arrays.</p>

</div>
</td></tr>
<tr><td><a href="ArrayLabels.html">ArrayLabels</a> </td>
<td><div class="info">
<p>Array operations.</p>

</div>
</td></tr>
<tr><td><a href="Ast_helper.html">Ast_helper</a> </td>
<td><div class="info">
<p>Helpers to produce Parsetree fragments</p>

</div>
</td></tr>
<tr><td><a href="Ast_invariants.html">Ast_invariants</a> </td>
<td><div class="info">
<p>Check AST invariants</p>

</div>
</td></tr>
<tr><td><a href="Ast_iterator.html">Ast_iterator</a> </td>
<td><div class="info">
<p><a href="Ast_iterator.html#TYPEiterator"><code class="code"><span class="constructor">Ast_iterator</span>.iterator</code></a> allows to implement AST inspection using open recursion.</p>

</div>
</td></tr>
<tr><td><a href="Ast_mapper.html">Ast_mapper</a> </td>
<td><div class="info">
<p>The interface of a -ppx rewriter</p>

</div>
</td></tr>
<tr><td><a href="Asttypes.html">Asttypes</a> </td>
<td><div class="info">
<p>Auxiliary AST types used by parsetree and typedtree.</p>

</div>
</td></tr>
<tr><td><a href="Attr_helper.html">Attr_helper</a> </td>
<td><div class="info">
<p>Helpers for attributes</p>

</div>
</td></tr>
<tr><td align="left"><div>B</div></td></tr>
<tr><td><a href="Bigarray.html">Bigarray</a> </td>
<td><div class="info">
<p>Large, multi-dimensional, numerical arrays.</p>

</div>
</td></tr>
<tr><td><a href="Buffer.html">Buffer</a> </td>
<td><div class="info">
<p>Extensible buffers.</p>

</div>
</td></tr>
<tr><td><a href="Builtin_attributes.html">Builtin_attributes</a> </td>
<td></td></tr>
<tr><td><a href="StdLabels.Bytes.html">Bytes</a> [<a href="StdLabels.html">StdLabels</a>]</td>
<td></td></tr>
<tr><td><a href="Bytes.html">Bytes</a> </td>
<td><div class="info">
<p>Byte sequence operations.</p>

</div>
</td></tr>
<tr><td><a href="BytesLabels.html">BytesLabels</a> </td>
<td><div class="info">
<p>Byte sequence operations.</p>

</div>
</td></tr>
<tr><td align="left"><div>C</div></td></tr>
<tr><td><a href="Callback.html">Callback</a> </td>
<td><div class="info">
<p>Registering OCaml values with the C runtime.</p>

</div>
</td></tr>
<tr><td><a href="CamlinternalFormat.html">CamlinternalFormat</a> </td>
<td></td></tr>
<tr><td><a href="CamlinternalFormatBasics.html">CamlinternalFormatBasics</a> </td>
<td></td></tr>
<tr><td><a href="CamlinternalLazy.html">CamlinternalLazy</a> </td>
<td><div class="info">
<p>Run-time support for lazy values.</p>

</div>
</td></tr>
<tr><td><a href="CamlinternalMod.html">CamlinternalMod</a> </td>
<td><div class="info">
<p>Run-time support for recursive modules.</p>

</div>
</td></tr>
<tr><td><a href="CamlinternalOO.html">CamlinternalOO</a> </td>
<td><div class="info">
<p>Run-time support for objects and classes.</p>

</div>
</td></tr>
<tr><td><a href="Ccomp.html">Ccomp</a> </td>
<td></td></tr>
<tr><td><a href="Ast_helper.Cf.html">Cf</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
<p>Class fields</p>

</div>
</td></tr>
<tr><td><a href="Char.html">Char</a> </td>
<td><div class="info">
<p>Character operations.</p>

</div>
</td></tr>
<tr><td><a href="Ast_helper.Ci.html">Ci</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
<p>Classes</p>

</div>
</td></tr>
<tr><td><a href="Ast_helper.Cl.html">Cl</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
<p>Class expressions</p>

</div>
</td></tr>
<tr><td><a href="Clflags.html">Clflags</a> </td>
<td><div class="info">
<p>Command line flags</p>

</div>
</td></tr>
<tr><td><a href="Misc.Color.html">Color</a> [<a href="Misc.html">Misc</a>]</td>
<td></td></tr>
<tr><td><a href="Complex.html">Complex</a> </td>
<td><div class="info">
<p>Complex numbers.</p>

</div>
</td></tr>
<tr><td><a href="Condition.html">Condition</a> </td>
<td><div class="info">
<p>Condition variables to synchronize between threads.</p>

</div>
</td></tr>
<tr><td><a href="Config.html">Config</a> </td>
<td></td></tr>
<tr><td><a href="Consistbl.html">Consistbl</a> </td>
<td></td></tr>
<tr><td><a href="Ast_helper.Const.html">Const</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td></td></tr>
<tr><td><a href="Ast_helper.Csig.html">Csig</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
<p>Class signatures</p>

</div>
</td></tr>
<tr><td><a href="Ast_helper.Cstr.html">Cstr</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
<p>Class structures</p>

</div>
</td></tr>
<tr><td><a href="Ast_helper.Ctf.html">Ctf</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
<p>Class type fields</p>

</div>
</td></tr>
<tr><td><a href="Ast_helper.Cty.html">Cty</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
<p>Class type expressions</p>

</div>
</td></tr>
<tr><td align="left"><div>D</div></td></tr>
<tr><td><a href="Depend.html">Depend</a> </td>
<td><div class="info">
<p>Module dependencies.</p>

</div>
</td></tr>
<tr><td><a href="Digest.html">Digest</a> </td>
<td><div class="info">
<p>MD5 message digest.</p>

</div>
</td></tr>
<tr><td><a href="Docstrings.html">Docstrings</a> </td>
<td><div class="info">
<p>Documentation comments</p>

</div>
</td></tr>
<tr><td><a href="Dynlink.html">Dynlink</a> </td>
<td><div class="info">
<p>Dynamic loading of object files.</p>

</div>
</td></tr>
<tr><td align="left"><div>E</div></td></tr>
<tr><td><a href="Obj.Ephemeron.html">Ephemeron</a> [<a href="Obj.html">Obj</a>]</td>
<td></td></tr>
<tr><td><a href="Ephemeron.html">Ephemeron</a> </td>
<td><div class="info">
<p>Ephemerons and weak hash table</p>

</div>
</td></tr>
<tr><td><a href="Event.html">Event</a> </td>
<td><div class="info">
<p>First-class synchronous communication.</p>

</div>
</td></tr>
<tr><td><a href="Ast_helper.Exp.html">Exp</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
<p>Expressions</p>

</div>
</td></tr>
<tr><td align="left"><div>F</div></td></tr>
<tr><td><a href="Filename.html">Filename</a> </td>
<td><div class="info">
<p>Operations on file names.</p>

</div>
</td></tr>
<tr><td><a href="Numbers.Float.html">Float</a> [<a href="Numbers.html">Numbers</a>]</td>
<td></td></tr>
<tr><td><a href="Clflags.Float_arg_helper.html">Float_arg_helper</a> [<a href="Clflags.html">Clflags</a>]</td>
<td><div class="info">
<p>Optimization parameters represented as floats indexed by round number.</p>

</div>
</td></tr>
<tr><td><a href="Format.html">Format</a> </td>
<td><div class="info">
<p>Pretty-printing.</p>

</div>
</td></tr>
<tr><td align="left"><div>G</div></td></tr>
<tr><td><a href="Gc.html">Gc</a> </td>
<td><div class="info">
<p>Memory management control and statistics; finalised values.</p>

</div>
</td></tr>
<tr><td><a href="Ephemeron.GenHashTable.html">GenHashTable</a> [<a href="Ephemeron.html">Ephemeron</a>]</td>
<td></td></tr>
<tr><td><a href="Bigarray.Genarray.html">Genarray</a> [<a href="Bigarray.html">Bigarray</a>]</td>
<td></td></tr>
<tr><td><a href="Genlex.html">Genlex</a> </td>
<td><div class="info">
<p>A generic lexical analyzer.</p>

</div>
</td></tr>
<tr><td><a href="Graphics.html">Graphics</a> </td>
<td><div class="info">
<p>Machine-independent graphics primitives.</p>

</div>
</td></tr>
<tr><td><a href="GraphicsX11.html">GraphicsX11</a> </td>
<td><div class="info">
<p>Additional graphics primitives for the X Windows system.</p>

</div>
</td></tr>
<tr><td align="left"><div>H</div></td></tr>
<tr><td><a href="MoreLabels.Hashtbl.html">Hashtbl</a> [<a href="MoreLabels.html">MoreLabels</a>]</td>
<td></td></tr>
<tr><td><a href="Hashtbl.html">Hashtbl</a> </td>
<td><div class="info">
<p>Hash tables and hash functions.</p>

</div>
</td></tr>
<tr><td><a href="Simplif.Hooks.html">Hooks</a> [<a href="Simplif.html">Simplif</a>]</td>
<td></td></tr>
<tr><td align="left"><div>I</div></td></tr>
<tr><td><a href="Strongly_connected_components.S.Id.html">Id</a> [<a href="Strongly_connected_components.S.html">Strongly_connected_components.S</a>]</td>
<td></td></tr>
<tr><td><a href="Identifiable.html">Identifiable</a> </td>
<td><div class="info">
<p>Uniform interface for common data structures over various things.</p>

</div>
</td></tr>
<tr><td><a href="Typemod.ImplementationHooks.html">ImplementationHooks</a> [<a href="Typemod.html">Typemod</a>]</td>
<td></td></tr>
<tr><td><a href="Pparse.ImplementationHooks.html">ImplementationHooks</a> [<a href="Pparse.html">Pparse</a>]</td>
<td></td></tr>
<tr><td><a href="Ast_helper.Incl.html">Incl</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
<p>Includes</p>

</div>
</td></tr>
<tr><td><a href="Numbers.Int.html">Int</a> [<a href="Numbers.html">Numbers</a>]</td>
<td></td></tr>
<tr><td><a href="Numbers.Int16.html">Int16</a> [<a href="Numbers.html">Numbers</a>]</td>
<td></td></tr>
<tr><td><a href="Int32.html">Int32</a> </td>
<td><div class="info">
<p>32-bit integers.</p>

</div>
</td></tr>
<tr><td><a href="Int64.html">Int64</a> </td>
<td><div class="info">
<p>64-bit integers.</p>

</div>
</td></tr>
<tr><td><a href="Numbers.Int8.html">Int8</a> [<a href="Numbers.html">Numbers</a>]</td>
<td></td></tr>
<tr><td><a href="Clflags.Int_arg_helper.html">Int_arg_helper</a> [<a href="Clflags.html">Clflags</a>]</td>
<td><div class="info">
<p>Optimization parameters represented as ints indexed by round number.</p>

</div>
</td></tr>
<tr><td><a href="Misc.Int_literal_converter.html">Int_literal_converter</a> [<a href="Misc.html">Misc</a>]</td>
<td></td></tr>
<tr><td><a href="Typemod.InterfaceHooks.html">InterfaceHooks</a> [<a href="Typemod.html">Typemod</a>]</td>
<td></td></tr>
<tr><td><a href="Pparse.InterfaceHooks.html">InterfaceHooks</a> [<a href="Pparse.html">Pparse</a>]</td>
<td></td></tr>
<tr><td align="left"><div>K</div></td></tr>
<tr><td><a href="Ephemeron.K1.html">K1</a> [<a href="Ephemeron.html">Ephemeron</a>]</td>
<td></td></tr>
<tr><td><a href="Ephemeron.K2.html">K2</a> [<a href="Ephemeron.html">Ephemeron</a>]</td>
<td></td></tr>
<tr><td><a href="Ephemeron.Kn.html">Kn</a> [<a href="Ephemeron.html">Ephemeron</a>]</td>
<td></td></tr>
<tr><td align="left"><div>L</div></td></tr>
<tr><td><a href="UnixLabels.LargeFile.html">LargeFile</a> [<a href="UnixLabels.html">UnixLabels</a>]</td>
<td><div class="info">
<p>File operations on large files.</p>

</div>
</td></tr>
<tr><td><a href="Unix.LargeFile.html">LargeFile</a> [<a href="Unix.html">Unix</a>]</td>
<td><div class="info">
<p>File operations on large files.</p>

</div>
</td></tr>
<tr><td><a href="Pervasives.LargeFile.html">LargeFile</a> [<a href="Pervasives.html">Pervasives</a>]</td>
<td><div class="info">
<p>Operations on large files.</p>

</div>
</td></tr>
<tr><td><a href="Lazy.html">Lazy</a> </td>
<td><div class="info">
<p>Deferred computations.</p>

</div>
</td></tr>
<tr><td><a href="Lexer.html">Lexer</a> </td>
<td></td></tr>
<tr><td><a href="Lexing.html">Lexing</a> </td>
<td><div class="info">
<p>The run-time library for lexers generated by <code class="code">ocamllex</code>.</p>

</div>
</td></tr>
<tr><td><a href="StdLabels.List.html">List</a> [<a href="StdLabels.html">StdLabels</a>]</td>
<td></td></tr>
<tr><td><a href="Misc.Stdlib.List.html">List</a> [<a href="Misc.Stdlib.html">Misc.Stdlib</a>]</td>
<td></td></tr>
<tr><td><a href="List.html">List</a> </td>
<td><div class="info">
<p>List operations.</p>

</div>
</td></tr>
<tr><td><a href="ListLabels.html">ListLabels</a> </td>
<td><div class="info">
<p>List operations.</p>

</div>
</td></tr>
<tr><td><a href="Location.html">Location</a> </td>
<td><div class="info">
<p>Source code locations (ranges of positions), used in parsetree.</p>

</div>
</td></tr>
<tr><td><a href="Misc.LongString.html">LongString</a> [<a href="Misc.html">Misc</a>]</td>
<td></td></tr>
<tr><td><a href="Longident.html">Longident</a> </td>
<td><div class="info">
<p>Long identifiers, used in parsetree.</p>

</div>
</td></tr>
<tr><td align="left"><div>M</div></td></tr>
<tr><td><a href="Weak.Make.html">Make</a> [<a href="Weak.html">Weak</a>]</td>
<td><div class="info">
<p>Functor building an implementation of the weak hash set structure.</p>

</div>
</td></tr>
<tr><td><a href="Strongly_connected_components.Make.html">Make</a> [<a href="Strongly_connected_components.html">Strongly_connected_components</a>]</td>
<td></td></tr>
<tr><td><a href="Set.Make.html">Make</a> [<a href="Set.html">Set</a>]</td>
<td><div class="info">
<p>Functor building an implementation of the set structure
   given a totally ordered type.</p>

</div>
</td></tr>
<tr><td><a href="MoreLabels.Set.Make.html">Make</a> [<a href="MoreLabels.Set.html">MoreLabels.Set</a>]</td>
<td></td></tr>
<tr><td><a href="MoreLabels.Map.Make.html">Make</a> [<a href="MoreLabels.Map.html">MoreLabels.Map</a>]</td>
<td></td></tr>
<tr><td><a href="MoreLabels.Hashtbl.Make.html">Make</a> [<a href="MoreLabels.Hashtbl.html">MoreLabels.Hashtbl</a>]</td>
<td></td></tr>
<tr><td><a href="Map.Make.html">Make</a> [<a href="Map.html">Map</a>]</td>
<td><div class="info">
<p>Functor building an implementation of the map structure
   given a totally ordered type.</p>

</div>
</td></tr>
<tr><td><a href="Identifiable.Make.html">Make</a> [<a href="Identifiable.html">Identifiable</a>]</td>
<td></td></tr>
<tr><td><a href="Hashtbl.Make.html">Make</a> [<a href="Hashtbl.html">Hashtbl</a>]</td>
<td><div class="info">
<p>Functor building an implementation of the hashtable structure.</p>

</div>
</td></tr>
<tr><td><a href="Ephemeron.Kn.Make.html">Make</a> [<a href="Ephemeron.Kn.html">Ephemeron.Kn</a>]</td>
<td><div class="info">
<p>Functor building an implementation of a weak hash table</p>

</div>
</td></tr>
<tr><td><a href="Ephemeron.K2.Make.html">Make</a> [<a href="Ephemeron.K2.html">Ephemeron.K2</a>]</td>
<td><div class="info">
<p>Functor building an implementation of a weak hash table</p>

</div>
</td></tr>
<tr><td><a href="Ephemeron.K1.Make.html">Make</a> [<a href="Ephemeron.K1.html">Ephemeron.K1</a>]</td>
<td><div class="info">
<p>Functor building an implementation of a weak hash table</p>

</div>
</td></tr>
<tr><td><a href="Arg_helper.Make.html">Make</a> [<a href="Arg_helper.html">Arg_helper</a>]</td>
<td></td></tr>
<tr><td><a href="Misc.MakeHooks.html">MakeHooks</a> [<a href="Misc.html">Misc</a>]</td>
<td></td></tr>
<tr><td><a href="MoreLabels.Hashtbl.MakeSeeded.html">MakeSeeded</a> [<a href="MoreLabels.Hashtbl.html">MoreLabels.Hashtbl</a>]</td>
<td></td></tr>
<tr><td><a href="Hashtbl.MakeSeeded.html">MakeSeeded</a> [<a href="Hashtbl.html">Hashtbl</a>]</td>
<td><div class="info">
<p>Functor building an implementation of the hashtable structure.</p>

</div>
</td></tr>
<tr><td><a href="Ephemeron.GenHashTable.MakeSeeded.html">MakeSeeded</a> [<a href="Ephemeron.GenHashTable.html">Ephemeron.GenHashTable</a>]</td>
<td><div class="info">
<p>Functor building an implementation of an hash table that use the container
      for keeping the information given</p>

</div>
</td></tr>
<tr><td><a href="Ephemeron.Kn.MakeSeeded.html">MakeSeeded</a> [<a href="Ephemeron.Kn.html">Ephemeron.Kn</a>]</td>
<td><div class="info">
<p>Functor building an implementation of a weak hash table.</p>

</div>
</td></tr>
<tr><td><a href="Ephemeron.K2.MakeSeeded.html">MakeSeeded</a> [<a href="Ephemeron.K2.html">Ephemeron.K2</a>]</td>
<td><div class="info">
<p>Functor building an implementation of a weak hash table.</p>

</div>
</td></tr>
<tr><td><a href="Ephemeron.K1.MakeSeeded.html">MakeSeeded</a> [<a href="Ephemeron.K1.html">Ephemeron.K1</a>]</td>
<td><div class="info">
<p>Functor building an implementation of a weak hash table.</p>

</div>
</td></tr>
<tr><td><a href="MoreLabels.Map.html">Map</a> [<a href="MoreLabels.html">MoreLabels</a>]</td>
<td></td></tr>
<tr><td><a href="Map.html">Map</a> </td>
<td><div class="info">
<p>Association tables over ordered types.</p>

</div>
</td></tr>
<tr><td><a href="Identifiable.S.Map.html">Map</a> [<a href="Identifiable.S.html">Identifiable.S</a>]</td>
<td></td></tr>
<tr><td><a href="Marshal.html">Marshal</a> </td>
<td><div class="info">
<p>Marshaling of data structures.</p>

</div>
</td></tr>
<tr><td><a href="Ast_helper.Mb.html">Mb</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
<p>Module bindings</p>

</div>
</td></tr>
<tr><td><a href="Ast_helper.Md.html">Md</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
<p>Module declarations</p>

</div>
</td></tr>
<tr><td><a href="Misc.html">Misc</a> </td>
<td></td></tr>
<tr><td><a href="Ast_helper.Mod.html">Mod</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
<p>Module expressions</p>

</div>
</td></tr>
<tr><td><a href="MoreLabels.html">MoreLabels</a> </td>
<td><div class="info">
<p>Extra labeled libraries.</p>

</div>
</td></tr>
<tr><td><a href="Ast_helper.Mtd.html">Mtd</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
<p>Module type declarations</p>

</div>
</td></tr>
<tr><td><a href="Ast_helper.Mty.html">Mty</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
<p>Module type expressions</p>

</div>
</td></tr>
<tr><td><a href="Mutex.html">Mutex</a> </td>
<td><div class="info">
<p>Locks for mutual exclusion.</p>

</div>
</td></tr>
<tr><td align="left"><div>N</div></td></tr>
<tr><td><a href="Nativeint.html">Nativeint</a> </td>
<td><div class="info">
<p>Processor-native integers.</p>

</div>
</td></tr>
<tr><td><a href="Numbers.html">Numbers</a> </td>
<td><div class="info">
<p>Modules about numbers, some of which satisfy <a href="Identifiable.S.html"><code class="code"><span class="constructor">Identifiable</span>.<span class="constructor">S</span></code></a>.</p>

</div>
</td></tr>
<tr><td align="left"><div>O</div></td></tr>
<tr><td><a href="Obj.html">Obj</a> </td>
<td><div class="info">
<p>Operations on internal representations of values.</p>

</div>
</td></tr>
<tr><td><a href="Oo.html">Oo</a> </td>
<td><div class="info">
<p>Operations on objects</p>

</div>
</td></tr>
<tr><td><a href="Ast_helper.Opn.html">Opn</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
<p>Opens</p>

</div>
</td></tr>
<tr><td><a href="Misc.Stdlib.Option.html">Option</a> [<a href="Misc.Stdlib.html">Misc.Stdlib</a>]</td>
<td></td></tr>
<tr><td align="left"><div>P</div></td></tr>
<tr><td><a href="Identifiable.Pair.html">Pair</a> [<a href="Identifiable.html">Identifiable</a>]</td>
<td></td></tr>
<tr><td><a href="Parse.html">Parse</a> </td>
<td><div class="info">
<p>Entry points in the parser</p>

</div>
</td></tr>
<tr><td><a href="Parser.html">Parser</a> </td>
<td></td></tr>
<tr><td><a href="Parsetree.html">Parsetree</a> </td>
<td><div class="info">
<p>Abstract syntax tree produced by parsing</p>

</div>
</td></tr>
<tr><td><a href="Parsing.html">Parsing</a> </td>
<td><div class="info">
<p>The run-time library for parsers generated by <code class="code">ocamlyacc</code>.</p>

</div>
</td></tr>
<tr><td><a href="Ast_helper.Pat.html">Pat</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
<p>Patterns</p>

</div>
</td></tr>
<tr><td><a href="Pervasives.html">Pervasives</a> </td>
<td><div class="info">
<p>The initially opened module.</p>

</div>
</td></tr>
<tr><td><a href="Pparse.html">Pparse</a> </td>
<td><div class="info">
<p>Driver for the parser, external preprocessors and ast plugin hooks</p>

</div>
</td></tr>
<tr><td><a href="Pprintast.html">Pprintast</a> </td>
<td></td></tr>
<tr><td><a href="Printast.html">Printast</a> </td>
<td></td></tr>
<tr><td><a href="Printexc.html">Printexc</a> </td>
<td><div class="info">
<p>Facilities for printing exceptions and inspecting current call stack.</p>

</div>
</td></tr>
<tr><td><a href="Printf.html">Printf</a> </td>
<td><div class="info">
<p>Formatted output functions.</p>

</div>
</td></tr>
<tr><td><a href="Profile.html">Profile</a> </td>
<td><div class="info">
<p>Compiler performance recording</p>

</div>
</td></tr>
<tr><td align="left"><div>Q</div></td></tr>
<tr><td><a href="Queue.html">Queue</a> </td>
<td><div class="info">
<p>First-in first-out queues.</p>

</div>
</td></tr>
<tr><td align="left"><div>R</div></td></tr>
<tr><td><a href="Random.html">Random</a> </td>
<td><div class="info">
<p>Pseudo-random number generators (PRNG).</p>

</div>
</td></tr>
<tr><td align="left"><div>S</div></td></tr>
<tr><td><a href="Scanf.html">Scanf</a> </td>
<td><div class="info">
<p>Formatted input functions.</p>

</div>
</td></tr>
<tr><td><a href="Scanf.Scanning.html">Scanning</a> [<a href="Scanf.html">Scanf</a>]</td>
<td></td></tr>
<tr><td><a href="Spacetime.Series.html">Series</a> [<a href="Spacetime.html">Spacetime</a>]</td>
<td></td></tr>
<tr><td><a href="Set.html">Set</a> </td>
<td><div class="info">
<p>Sets over ordered types.</p>

</div>
</td></tr>
<tr><td><a href="MoreLabels.Set.html">Set</a> [<a href="MoreLabels.html">MoreLabels</a>]</td>
<td></td></tr>
<tr><td><a href="Identifiable.S.Set.html">Set</a> [<a href="Identifiable.S.html">Identifiable.S</a>]</td>
<td></td></tr>
<tr><td><a href="Ast_helper.Sig.html">Sig</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
<p>Signature items</p>

</div>
</td></tr>
<tr><td><a href="Simplif.html">Simplif</a> </td>
<td><div class="info">
<p>Lambda simplification and lambda plugin hooks</p>

</div>
</td></tr>
<tr><td><a href="Printexc.Slot.html">Slot</a> [<a href="Printexc.html">Printexc</a>]</td>
<td><div class="info">
</div>
</td></tr>
<tr><td><a href="Spacetime.Snapshot.html">Snapshot</a> [<a href="Spacetime.html">Spacetime</a>]</td>
<td></td></tr>
<tr><td><a href="Sort.html">Sort</a> </td>
<td><div class="info">
<span class="deprecated"><p>Sorting and merging lists.</p>

</span></div>
</td></tr>
<tr><td><a href="Spacetime.html">Spacetime</a> </td>
<td><div class="info">
<p>Profiling of a program's space behaviour over time.</p>

</div>
</td></tr>
<tr><td><a href="Stack.html">Stack</a> </td>
<td><div class="info">
<p>Last-in first-out stacks.</p>

</div>
</td></tr>
<tr><td><a href="Random.State.html">State</a> [<a href="Random.html">Random</a>]</td>
<td></td></tr>
<tr><td><a href="StdLabels.html">StdLabels</a> </td>
<td><div class="info">
<p>Standard labeled libraries.</p>

</div>
</td></tr>
<tr><td><a href="Misc.Stdlib.html">Stdlib</a> [<a href="Misc.html">Misc</a>]</td>
<td></td></tr>
<tr><td><a href="Str.html">Str</a> </td>
<td><div class="info">
<p>Regular expressions and high-level string processing</p>

</div>
</td></tr>
<tr><td><a href="Ast_helper.Str.html">Str</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
<p>Structure items</p>

</div>
</td></tr>
<tr><td><a href="Stream.html">Stream</a> </td>
<td><div class="info">
<p>Streams and parsers.</p>

</div>
</td></tr>
<tr><td><a href="String.html">String</a> </td>
<td><div class="info">
<p>String operations.</p>

</div>
</td></tr>
<tr><td><a href="StdLabels.String.html">String</a> [<a href="StdLabels.html">StdLabels</a>]</td>
<td></td></tr>
<tr><td><a href="StringLabels.html">StringLabels</a> </td>
<td><div class="info">
<p>String operations.</p>

</div>
</td></tr>
<tr><td><a href="Misc.StringMap.html">StringMap</a> [<a href="Misc.html">Misc</a>]</td>
<td></td></tr>
<tr><td><a href="Depend.StringMap.html">StringMap</a> [<a href="Depend.html">Depend</a>]</td>
<td></td></tr>
<tr><td><a href="Misc.StringSet.html">StringSet</a> [<a href="Misc.html">Misc</a>]</td>
<td></td></tr>
<tr><td><a href="Depend.StringSet.html">StringSet</a> [<a href="Depend.html">Depend</a>]</td>
<td></td></tr>
<tr><td><a href="Strongly_connected_components.html">Strongly_connected_components</a> </td>
<td><div class="info">
<p>Kosaraju's algorithm for strongly connected components.</p>

</div>
</td></tr>
<tr><td><a href="Syntaxerr.html">Syntaxerr</a> </td>
<td><div class="info">
<p>Auxiliary type for reporting syntax errors</p>

</div>
</td></tr>
<tr><td><a href="Sys.html">Sys</a> </td>
<td><div class="info">
<p>System interface.</p>

</div>
</td></tr>
<tr><td align="left"><div>T</div></td></tr>
<tr><td><a href="Identifiable.Tbl.T.html">T</a> [<a href="Identifiable.Tbl.html">Identifiable.Tbl</a>]</td>
<td></td></tr>
<tr><td><a href="Identifiable.Map.T.html">T</a> [<a href="Identifiable.Map.html">Identifiable.Map</a>]</td>
<td></td></tr>
<tr><td><a href="Identifiable.Set.T.html">T</a> [<a href="Identifiable.Set.html">Identifiable.Set</a>]</td>
<td></td></tr>
<tr><td><a href="Identifiable.S.T.html">T</a> [<a href="Identifiable.S.html">Identifiable.S</a>]</td>
<td></td></tr>
<tr><td><a href="Targetint.html">Targetint</a> </td>
<td><div class="info">
<p>Target processor-native integers.</p>

</div>
</td></tr>
<tr><td><a href="Tbl.html">Tbl</a> </td>
<td></td></tr>
<tr><td><a href="Identifiable.S.Tbl.html">Tbl</a> [<a href="Identifiable.S.html">Identifiable.S</a>]</td>
<td></td></tr>
<tr><td><a href="Ast_helper.Te.html">Te</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
<p>Type extensions</p>

</div>
</td></tr>
<tr><td><a href="Terminfo.html">Terminfo</a> </td>
<td></td></tr>
<tr><td><a href="Thread.html">Thread</a> </td>
<td><div class="info">
<p>Lightweight threads for Posix <code class="code">1003.1c</code> and Win32.</p>

</div>
</td></tr>
<tr><td><a href="ThreadUnix.html">ThreadUnix</a> </td>
<td><div class="info">
<span class="deprecated"><p>Thread-compatible system calls.</p>

</span></div>
</td></tr>
<tr><td><a href="Ast_helper.Typ.html">Typ</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
<p>Type expressions</p>

</div>
</td></tr>
<tr><td><a href="Ast_helper.Type.html">Type</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
<p>Type declarations</p>

</div>
</td></tr>
<tr><td><a href="Typemod.html">Typemod</a> </td>
<td><div class="info">
<p>Type-checking of the module language and typed ast plugin hooks</p>

</div>
</td></tr>
<tr><td align="left"><div>U</div></td></tr>
<tr><td><a href="Uchar.html">Uchar</a> </td>
<td><div class="info">
<p>Unicode characters.</p>

</div>
</td></tr>
<tr><td><a href="Unix.html">Unix</a> </td>
<td><div class="info">
<p>Interface to the Unix system.</p>

</div>
</td></tr>
<tr><td><a href="UnixLabels.html">UnixLabels</a> </td>
<td><div class="info">
<p>Interface to the Unix system.</p>

</div>
</td></tr>
<tr><td align="left"><div>V</div></td></tr>
<tr><td><a href="Ast_helper.Val.html">Val</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
<p>Value declarations</p>

</div>
</td></tr>
<tr><td><a href="Ast_helper.Vb.html">Vb</a> [<a href="Ast_helper.html">Ast_helper</a>]</td>
<td><div class="info">
<p>Value bindings</p>

</div>
</td></tr>
<tr><td align="left"><div>W</div></td></tr>
<tr><td><a href="Warnings.html">Warnings</a> </td>
<td></td></tr>
<tr><td><a href="Weak.html">Weak</a> </td>
<td><div class="info">
<p>Arrays of weak pointers and hash sets of weak pointers.</p>

</div>
</td></tr>
</tbody></table>

<div class="copyright">The present documentation is copyright Institut National de Recherche en Informatique et en Automatique (INRIA). A complete version can be obtained from <a href="http://caml.inria.fr/pub/docs/manual-ocaml/">this page</a>.</div></div>